--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,285 @@
 /* место для вашего кода */
+body {
+    margin: 0;
+    font-family: Raleway, sans-serif;
+    font-weight: 400;
+    background-color: #FFFFFF;
+}
+.header{
+    display: grid;
+    grid-template-columns: 454px 148px 450px;
+    font-size: 18px;
+    padding: 92px 24px 92px 24px;
+}
+.header__menu {
+    width: 391.48px;
+    margin: 44px 36px 39px 26.52px;
+}
+.header__links-list{
+    display: flex;
+    margin: auto;
+    justify-content:space-between;
+}
+.header__link {
+    text-decoration: none;
+}
+.header__links-list-item {
+    list-style:circle;
+}
+.header__links-list-item_no-bullit {
+    list-style: none;
+}
+.header__logo { 
+    display: block;
+    width: 148px;
+    height: 105px;
+}
+.header__contacts { 
+    width: 240.52px;
+    height: 98px;
+    margin: 5px 25.48px 2px 184px;
+}
+.address {
+    font-style: inherit;
+}
+.cover {
+    width: 1100px;
+    height: 757px;
+    position: relative;
+    background-image: url(../images/cover.jpg);
+    background-repeat: no-repeat;
+    background-size: cover; 
+    background-position: center center;
+}
+.overlay {
+    background-color: rgb(0 0 0 / 0.6);
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+.cover__title {
+    box-sizing: border-box;
+    position: relative;
+    z-index: +1;
+    width: 1000px;
+    padding: 165px 50px 115px 50px;
+    }
+.aligned-text {display: block;
+    font-size: 100px;
+    font-weight: 700; 
+    color:#ffffff;
+    text-transform: uppercase;
+    letter-spacing: 0.3em;
+}
+.aligned-text_center {
+    text-align: center;
+    padding-left: 110px;
+}
+.aligned-text_right {
+    text-align: right;
+    margin-top: 20px;
+    padding-left: 585px;
+}
+.letter-spacing-extended {
+    letter-spacing: 0.6em;
+}
+.no-letter-spacing {
+    letter-spacing: 0em;
+}
+.cover__description {
+    padding: 0px 50px 51px 78px;
+    display: flex;
+    position: relative;
+    z-index: +1;
+    justify-content: space-between;
+    align-items: center;
+}
+.cover__description-text {
+    width: 637px;
+    height: 28px;
+    font-size:22px;
+    font-weight: 400; 
+    line-height: 28px;
+    word-spacing: 18px; 
+    display: flex;
+    color:#FFFFFF;
+    text-transform: uppercase;
+    }
+.bet-button {
+    width: 256px;
+    height: 51px;
+    color: white;
+    background-color: transparent;
+    border-color: white;
+    border-width: 1px;
+    border-style: solid;
+    font-size:22px;
+    font-weight: 500; 
+    line-height: 25.83px;
+    text-transform: uppercase;
+}
+.lots {
+    box-sizing: border-box;
+    padding: 179px 24px 0px 24px;
+}
+.lots__heading {
+    padding: 0px 0px 27px 40px;
+    font-size: 40px;
+    font-weight: 700; 
+    color:#000000;
+    text-transform: uppercase;
+}
+.lots__card-list {
+    display: flex;
+    flex-grow: 1;
+    margin: auto;
+    justify-content: space-between;
+    align-items: start; 
+    column-gap: 25px;
+    list-style: none;
+}
+.lots__card-list-item {
+    height: 100%;
+}
+.card-link {
+    display: block;
+    height: 100%;
+    text-decoration: none;
+}
+.card {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    min-width: 334px;
+    min-height: 563px;
+    width: auto;
+    height: 100%;
+    padding: 50px 40px;
+    flex-wrap: wrap;
+    }
+.card_type_film {
+    background-image: url(../images/card-lot-01.jpg);
+    background-repeat: no-repeat;
+    background-size: cover; 
+    background-position: center center;
+}
+.card_type_book {
+    background-image: url(../images/card-lot-02.jpg);
+    background-repeat: no-repeat;
+    background-size: cover; 
+    background-position: center center;
+}
+.card_type_picture {
+    background-image: url(../images/card-lot-03.jpg);
+    background-repeat: no-repeat;
+    background-size: cover; 
+    background-position: center center;
+}
+.card__title {
+    position: relative;
+    font-size:22px;
+    font-weight: 700; 
+    line-height: 26.4px; 
+    color:#FFFFFF;
+    text-transform: uppercase;
+    text-decoration-line: underline;
+    z-index: 2;
+}
+.card__text {
+    position: relative;
+    font-size:20px;
+    font-weight: 400; 
+    line-height: 24px; 
+    color:#FFFFFF;
+    z-index: 2;
+}
+.lots__look-more-link {
+    display: block;
+    padding: 30px 0px 0px 40px;
+    font-size:20px;
+    font-weight: 400; 
+    line-height: 24px; 
+    color:#000000;
+}
+.about {
+    padding: 146px 24px 0px 24px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    column-gap: 25px;  
+}
+.about__column {
+    justify-self: center;
+}
+.about__logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 240px;
+    height: 240px;
+    background-color: #000000;
+    border-radius: 100%;
+}
+.about__logo-image {
+    width: 148px;
+    height: 114px;
+}
+.about__section {
+    grid-column: 2/4;
+}
+.about__title {
+    font-size: 40px;
+    font-weight: 700; 
+    color:#000000;
+    text-transform: uppercase;
+    padding: 101px 0px 100px 0px;
+    width: auto;
+}
+.about__text { 
+    min-width: 693;
+    display: flex;
+    flex-direction: column;
+    font-size: 20px;
+    font-weight: 400; 
+    line-height: 24px;
+    color:#000000;
+}
+.about__text__second {
+    padding: 24px 0px 0px 0px;
+}
+
+.footer {
+    display: flex;
+    justify-content: space-between;
+    font-size: 18px;
+    padding: 180px 50px 88px 50px;
+}
+.footer__contacts {
+    width: 240.52px;
+    height: 98px;
+}
+.footer__menu-list {
+    list-style: none;
+    text-align: center;
+}
+.footer__menu-link {
+    text-decoration: none;
+    font-size: 18px;
+}
+.footer__menu-link_active {
+    text-decoration: underline;
+    font-size: 18px;
+}
+.footer__social-list {
+    list-style: none;
+    display: flex;
+    gap: 48px;
+}
+
+.footer__social-icon { 
+    display: block;
+    width: 48px;
+    height: 48px;
+}
