--- a/styles/style.css
+++ b/styles/style.css
@@ -5,7 +5,7 @@ body {
     font-weight: 400;
     background-color: #FFFFFF;
 }
-.header{
+.header {
     display: grid;
     grid-template-columns: 454px 148px 450px;
     font-size: 18px;
@@ -15,7 +15,7 @@ body {
     width: 391.48px;
     margin: 44px 36px 39px 26.52px;
 }
-.header__links-list{
+.header__links-list {
     display: flex;
     margin: auto;
     justify-content:space-between;
@@ -29,12 +29,12 @@ body {
 .header__links-list-item_no-bullit {
     list-style: none;
 }
-.header__logo { 
+.header__logo {
     display: block;
     width: 148px;
     height: 105px;
 }
-.header__contacts { 
+.header__contacts {
     width: 240.52px;
     height: 98px;
     margin: 5px 25.48px 2px 184px;
@@ -48,7 +48,7 @@ body {
     position: relative;
     background-image: url(../images/cover.jpg);
     background-repeat: no-repeat;
-    background-size: cover; 
+    background-size: cover;
     background-position: center center;
 }
 .overlay {
@@ -66,9 +66,10 @@ body {
     width: 1000px;
     padding: 165px 50px 115px 50px;
     }
-.aligned-text {display: block;
+.aligned-text {
+    display: block;
     font-size: 100px;
-    font-weight: 700; 
+    font-weight: 700;
     color:#ffffff;
     text-transform: uppercase;
     letter-spacing: 0.3em;
@@ -100,9 +101,9 @@ body {
     width: 637px;
     height: 28px;
     font-size:22px;
-    font-weight: 400; 
+    font-weight: 400;
     line-height: 28px;
-    word-spacing: 18px; 
+    word-spacing: 18px;
     display: flex;
     color:#FFFFFF;
     text-transform: uppercase;
@@ -116,7 +117,7 @@ body {
     border-width: 1px;
     border-style: solid;
     font-size:22px;
-    font-weight: 500; 
+    font-weight: 500;
     line-height: 25.83px;
     text-transform: uppercase;
 }
@@ -127,7 +128,7 @@ body {
 .lots__heading {
     padding: 0px 0px 27px 40px;
     font-size: 40px;
-    font-weight: 700; 
+    font-weight: 700;
     color:#000000;
     text-transform: uppercase;
 }
@@ -136,7 +137,7 @@ body {
     flex-grow: 1;
     margin: auto;
     justify-content: space-between;
-    align-items: start; 
+    align-items: start;
     column-gap: 25px;
     list-style: none;
 }
@@ -163,26 +164,26 @@ body {
 .card_type_film {
     background-image: url(../images/card-lot-01.jpg);
     background-repeat: no-repeat;
-    background-size: cover; 
+    background-size: cover;
     background-position: center center;
 }
 .card_type_book {
     background-image: url(../images/card-lot-02.jpg);
     background-repeat: no-repeat;
-    background-size: cover; 
+    background-size: cover;
     background-position: center center;
 }
 .card_type_picture {
     background-image: url(../images/card-lot-03.jpg);
     background-repeat: no-repeat;
-    background-size: cover; 
+    background-size: cover;
     background-position: center center;
 }
 .card__title {
     position: relative;
     font-size:22px;
-    font-weight: 700; 
-    line-height: 26.4px; 
+    font-weight: 700;
+    line-height: 26.4px;
     color:#FFFFFF;
     text-transform: uppercase;
     text-decoration-line: underline;
@@ -191,8 +192,8 @@ body {
 .card__text {
     position: relative;
     font-size:20px;
-    font-weight: 400; 
-    line-height: 24px; 
+    font-weight: 400;
+    line-height: 24px;
     color:#FFFFFF;
     z-index: 2;
 }
@@ -200,15 +201,15 @@ body {
     display: block;
     padding: 30px 0px 0px 40px;
     font-size:20px;
-    font-weight: 400; 
-    line-height: 24px; 
+    font-weight: 400;
+    line-height: 24px;
     color:#000000;
 }
 .about {
     padding: 146px 24px 0px 24px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    column-gap: 25px;  
+    column-gap: 25px;
 }
 .about__column {
     justify-self: center;
@@ -231,7 +232,7 @@ body {
 }
 .about__title {
     font-size: 40px;
-    font-weight: 700; 
+    font-weight: 700;
     color:#000000;
     text-transform: uppercase;
     padding: 101px 0px 100px 0px;
@@ -242,7 +243,7 @@ body {
     display: flex;
     flex-direction: column;
     font-size: 20px;
-    font-weight: 400; 
+    font-weight: 400;
     line-height: 24px;
     color:#000000;
 }
@@ -277,7 +278,6 @@ body {
     display: flex;
     gap: 48px;
 }
-
 .footer__social-icon { 
     display: block;
     width: 48px;
