--- a/styles/style.css
+++ b/styles/style.css
@@ -1,9 +1,11 @@
 /* место для вашего кода */
 body {
-    margin: 0;
     font-family: Raleway, sans-serif;
     font-weight: 400;
     background-color: #FFFFFF;
+    width: 1100px;
+    margin: 0 auto;
+    font-family: Raleway, Arial, sans-serif;
 }
 .header {
     display: grid;
@@ -12,7 +14,6 @@ body {
     padding: 92px 24px 92px 24px;
 }
 .header__menu {
-    width: 391.48px;
     margin: 44px 36px 39px 26.52px;
 }
 .header__links-list {
@@ -31,20 +32,20 @@ body {
 }
 .header__logo {
     display: block;
+}
+.header__logo-image {
     width: 148px;
     height: 105px;
 }
 .header__contacts {
-    width: 240.52px;
-    height: 98px;
+    max-width: 240.52px;
     margin: 5px 25.48px 2px 184px;
 }
 .address {
     font-style: inherit;
 }
 .cover {
-    width: 1100px;
-    height: 757px;
+    padding: 0;
     position: relative;
     background-image: url(../images/cover.jpg);
     background-repeat: no-repeat;
@@ -56,14 +57,12 @@ body {
     width: 100%;
     height: 100%;
     position: absolute;
-    top: 0;
-    left: 0;
+    inset: 0;
 }
 .cover__title {
     box-sizing: border-box;
     position: relative;
-    z-index: +1;
-    width: 1000px;
+    z-index: 1;
     padding: 165px 50px 115px 50px;
     }
 .aligned-text {
@@ -76,11 +75,11 @@ body {
 }
 .aligned-text_center {
     text-align: center;
-    padding-left: 110px;
+    margin-top: 5px;
 }
 .aligned-text_right {
     text-align: right;
-    margin-top: 20px;
+    margin-top: 5px;
     padding-left: 585px;
 }
 .letter-spacing-extended {
@@ -90,16 +89,14 @@ body {
     letter-spacing: 0em;
 }
 .cover__description {
-    padding: 0px 50px 51px 78px;
+    padding: 10px 50px 51px 80px;
     display: flex;
     position: relative;
-    z-index: +1;
+    z-index: 1;
     justify-content: space-between;
     align-items: center;
 }
 .cover__description-text {
-    width: 637px;
-    height: 28px;
     font-size:22px;
     font-weight: 400;
     line-height: 28px;
@@ -134,15 +131,17 @@ body {
 }
 .lots__card-list {
     display: flex;
-    flex-grow: 1;
+    flex-wrap: wrap;
     margin: auto;
     justify-content: space-between;
     align-items: start;
-    column-gap: 25px;
+    gap: 25px;
     list-style: none;
 }
 .lots__card-list-item {
     height: 100%;
+    width: 334px;
+    flex-grow: 1;
 }
 .card-link {
     display: block;
@@ -154,30 +153,21 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    min-width: 334px;
     min-height: 563px;
     width: auto;
-    height: 100%;
     padding: 50px 40px;
-    flex-wrap: wrap;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
     }
 .card_type_film {
     background-image: url(../images/card-lot-01.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center center;
 }
 .card_type_book {
     background-image: url(../images/card-lot-02.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center center;
 }
 .card_type_picture {
     background-image: url(../images/card-lot-03.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center center;
 }
 .card__title {
     position: relative;
@@ -204,9 +194,10 @@ body {
     font-weight: 400;
     line-height: 24px;
     color:#000000;
+    max-width: fit-content;
 }
 .about {
-    padding: 146px 24px 0px 24px;
+    padding: 180px 24px 0px 24px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     column-gap: 25px;
@@ -239,18 +230,14 @@ body {
     width: auto;
 }
 .about__text {
-    min-width: 693;
     display: flex;
     flex-direction: column;
+    gap: 24px;
     font-size: 20px;
     font-weight: 400;
     line-height: 24px;
     color:#000000;
 }
-.about__text__second {
-    padding: 24px 0px 0px 0px;
-}
-
 .footer {
     display: flex;
     justify-content: space-between;
@@ -258,8 +245,8 @@ body {
     padding: 180px 50px 88px 50px;
 }
 .footer__contacts {
-    width: 240.52px;
-    height: 98px;
+    padding: 5px 0 0 0;
+    max-width: 240.52px;
 }
 .footer__menu-list {
     list-style: none;
